--- a/docs/structured_data_classification_intro.ipynb
+++ b/docs/structured_data_classification_intro.ipynb
@@ -17,19 +17,79 @@
         "id": "8CCfeE45b_vi"
       },
       "source": [
-        "This example demonstrates how to do structured data classification, starting from a raw\n",
-        "CSV file. Our data includes both numerical and categorical features. We will use Keras\n",
-        "preprocessing layers to normalize the numerical features and vectorize the categorical\n",
-        "ones.\n",
+        "- This example demonstrates how to do structured binary classification with Keras, starting from a raw CSV file. \n",
         "\n",
+        "- Our data includes both numerical and categorical features. \n",
+        "\n",
+        "- We will use Keras preprocessing layers to normalize the numerical features and vectorize the categorical ones.\n",
+        "\n",
+        "```{Note}\n",
         "Note that this example should be run with TensorFlow 2.5 or higher.\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qAbd3kbsb_vj"
+      },
+      "source": [
+        "## Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "aubhVbfWb_vk"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'2.7.1'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
-        "[Our dataset](https://archive.ics.uci.edu/ml/datasets/heart+Disease) is provided by the\n",
-        "Cleveland Clinic Foundation for Heart Disease.\n",
-        "It's a CSV file with 303 rows. Each row contains information about a patient (a\n",
-        "**sample**), and each column describes an attribute of the patient (a **feature**). We\n",
-        "use the features to predict whether a patient has a heart disease (**binary\n",
-        "classification**).\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "tf.__version__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RzNNij6qb_vl"
+      },
+      "source": [
+        "## Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Our dataset](https://archive.ics.uci.edu/ml/datasets/heart+Disease) is provided by the Cleveland Clinic Foundation for Heart Disease.\n",
+        "\n",
+        "- It's a CSV file with 303 rows. Each row contains information about a patient (a**sample**), and each column describes an attribute of the patient (a **feature**). \n",
+        "\n",
+        "- We use the features to predict whether a patient has a heart disease (**binary classification**)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "Here's the description of each feature:\n",
         "\n",
@@ -53,35 +113,40 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "qAbd3kbsb_vj"
-      },
+      "metadata": {},
       "source": [
-        "## Setup"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "aubhVbfWb_vk"
-      },
-      "outputs": [],
-      "source": [
-        "import tensorflow as tf\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "The following feature are continuous numerical features:\n",
+        "\n",
+        "- `age`\n",
+        "- `trestbps`\n",
+        "- `chol`\n",
+        "- `thalach`\n",
+        "- `oldpeak`\n",
+        "- `slope`"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "RzNNij6qb_vl"
-      },
+      "metadata": {},
       "source": [
-        "## Data\n",
+        "The following features are *categorical features* encoded as integers:\n",
+        "\n",
+        "- `sex`\n",
+        "- `cp`\n",
+        "- `fbs`\n",
+        "- `restecg`\n",
+        "- `exang`\n",
+        "- `ca`\n",
+        "\n",
+        "The following feature is a *categorical features* encoded as string:\n",
+        "\n",
+        "- `thal`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "\n",
         "### Data import\n",
@@ -90,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "EId7MS20b_vm"
       },
@@ -101,49 +166,17 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "pORrkaefb_vn"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(303, 14)"
-            ]
-          },
-          "execution_count": 20,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df.shape"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ao0iPbeFb_vn"
-      },
-      "source": [
-        "The dataset includes 303 samples with 14 columns per sample (13 features, plus the target\n",
-        "label):"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "XaRl1q_ib_vo"
       },
       "source": [
-        "Here's a preview of a few samples:"
+        "- Here's a preview of a few samples:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 4,
       "metadata": {
         "id": "zW3GlXdWb_vo"
       },
@@ -291,7 +324,7 @@
               "4   0      normal       0  "
             ]
           },
-          "execution_count": 22,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -301,13 +334,53 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "pORrkaefb_vn"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 303 entries, 0 to 302\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column    Non-Null Count  Dtype  \n",
+            "---  ------    --------------  -----  \n",
+            " 0   age       303 non-null    int64  \n",
+            " 1   sex       303 non-null    int64  \n",
+            " 2   cp        303 non-null    int64  \n",
+            " 3   trestbps  303 non-null    int64  \n",
+            " 4   chol      303 non-null    int64  \n",
+            " 5   fbs       303 non-null    int64  \n",
+            " 6   restecg   303 non-null    int64  \n",
+            " 7   thalach   303 non-null    int64  \n",
+            " 8   exang     303 non-null    int64  \n",
+            " 9   oldpeak   303 non-null    float64\n",
+            " 10  slope     303 non-null    int64  \n",
+            " 11  ca        303 non-null    int64  \n",
+            " 12  thal      303 non-null    object \n",
+            " 13  target    303 non-null    int64  \n",
+            "dtypes: float64(1), int64(12), object(1)\n",
+            "memory usage: 33.3+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OzCeAJ0sb_vp"
+        "id": "ao0iPbeFb_vn"
       },
       "source": [
-        "The last column, \"target\", indicates whether the patient has a heart disease (1) or not\n",
-        "(0)."
+        "- The dataset includes 303 samples with 14 columns per sample (13 features, plus the target label).\n",
+        "\n",
+        "- The last column, \"target\", indicates whether the patient has a heart disease (1) or not (0)."
       ]
     },
     {
@@ -316,7 +389,7 @@
       "source": [
         "### Data splitting\n",
         "\n",
-        "Let's split the data into a training and validation set:"
+        "- Let's split the data into a training and validation set:"
       ]
     },
     {
